minor changes to the configuration file

--- a/conf/shblog.conf
+++ b/conf/shblog.conf
@@ -1,10 +1,11 @@
 # Welcome to your configuration file!
 
-# Basic configuration
-BLOGURL=http://blog.url.com/path # complete URL, without final slash
+# Complete blog URL, without final slash
+# i.e http://blog.url.com/path
+BLOGURL=""
 
 # Don't troll :-)
-EDITOR=vim
+EDITOR="vim"
 
 # You shall modify the title and description of your blog
 BLOGTITLE="shblog"
@@ -13,6 +14,7 @@ BLOGDESC="write your own"
 # Default author
 AUTHOR="$USER"
 
+# Date format using the date(1) syntax
 DATEFORMAT="%a %d %b %Y, %Hh%m"
 
 # Language
