--- a/conf/shblog.conf
+++ b/conf/shblog.conf
@@ -1,5 +1,12 @@
 # Welcome to your configuration file!
 
+# Basic shblog variables
+export BASEDIR="/usr/share/shblog"
+
+# Default directories
+DATADIR="/var/spool/shblog/$USER/data"
+STATICDIR="/var/cache/shblog/$USER/static"
+
 # Complete blog URL, without final slash
 # i.e http://blog.url.com/path
 BLOGURL=""
