setting LIBDIR in configuration file

--- a/conf/shblog.conf
+++ b/conf/shblog.conf
@@ -2,6 +2,7 @@
 
 # Basic shblog variables
 export BASEDIR="/usr/share/shblog"
+export LIBDIR="/usr/lib/shblog"
 
 # Default directories
 DATADIR="/var/spool/shblog/$USER/data"
